--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,16 @@ background-image: url("images/tom1.png");
   margin: 10px;
   background-color: white;
 }
+
+
+
+.icon{
+padding-top: 0.5rem;
+scale: 90%;
+color: #fff;
+transition: 0.4s;
+}
+
+.icon:hover{
+  color: #da0463;
+}
